--- a/.htaccess
+++ b/.htaccess
@@ -8,3 +8,25 @@
 <IfModule mod_authz_core.c>
 	Require all denied
 </IfModule>
+
+# WP_ThemeSettings CSS
+<FilesMatch "^(font-awesome\.min|main)\.css$">
+	<IfModule !mod_authz_core.c>
+		Allow from all
+	</IfModule>
+
+	<IfModule mod_authz_core.c>
+		Require all granted
+	</IfModule>
+</FilesMatch>
+
+# WP_ThemeSettings Font
+<FilesMatch "^fontawesome-webfont\.(woff|woff2|ttf)$">
+	<IfModule !mod_authz_core.c>
+		Allow from all
+	</IfModule>
+
+	<IfModule mod_authz_core.c>
+		Require all granted
+	</IfModule>
+</FilesMatch>
