1. Update menu icon 2. Add header block 3. rename css styles

--- a/assets/admin/.htaccess
+++ b/assets/admin/.htaccess
@@ -32,7 +32,7 @@
 </FilesMatch>
 
 # WP_ThemeSettings IMG
-<FilesMatch "^(bg-noise)\.(png)$">
+<FilesMatch "^(logo-30x30|bg-noise)\.(png)$">
 	<IfModule !mod_authz_core.c>
 		Allow from all
 	</IfModule>
